--- a/package.json
+++ b/package.json
@@ -12,5 +12,9 @@
   "devDependencies": {
     "@azure/functions": "^1.2.3",
     "typescript": "^4.0.0"
+  },
+  "dependencies": {
+    "discord-interactions": "^2.3.0",
+    "request": "^2.88.2"
   }
 }
