--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "typescript": "^4.0.0"
   },
   "dependencies": {
+    "@types/node": "^16.4.7",
     "discord-interactions": "^2.3.0",
     "request": "^2.88.2"
   }
