--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@types/node": "^16.4.7",
+    "@types/request": "^2.48.7",
     "discord-interactions": "^2.3.0",
     "request": "^2.88.2"
   }
