--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/node": "^16.4.7",
     "@types/request": "^2.48.7",
     "discord-interactions": "^2.3.0",
+    "express": "^4.17.1",
     "request": "^2.88.2"
   }
 }
